@@ -1,3 +1,8 @@
+2009-07-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/40747
+	* gcc.c-torture/execute/pr40747.c: New test.
+
 2009-07-14  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.target/i386/sse-recip-vec.c: Move arrays out of test
