@@ -1,3 +1,10 @@
+2009-07-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/40747
+	* fold-const.c (fold_cond_expr_with_comparison): When folding
+	< and <= to MIN, make sure the MIN uses the same type as the
+	comparison's operands.
+
 2009-07-12  Kai Tietz  <kai.tietz@onevision.com>
 
 	* config/i386/cygming.h (TARGET_OS_CPP_BUILTINS): Define _X86_
